# AI-Scientist-v2

./: ENHANCED_GRADIO_README.md  GRADIO_README.md  ai-scientist-gradio.service  app.py  app_implementation.txt  install_service.sh  packages.txt  pyproject.toml  requirements.txt  start_app.sh
ai_scientist/: llm.py
