[project]
name = "ai-scientist-v2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "backoff>=2.2.1",
    "black>=25.1.0",
    "boto3>=1.37.35",
    "botocore>=1.37.35",
    "coolname>=2.2.0",
    "dataclasses-json>=0.6.7",
    "datasets>=3.5.0",
    "funcy>=2.0",
    "genson>=1.3.0",
    "gradio>=5.25.2",
    "humanize>=4.12.2",
    "icecream>=2.1.4",
    "jsonschema>=4.23.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "omegaconf>=2.3.0",
    "openai>=1.75.0",
    "pymupdf4llm>=0.0.21",
    "pypdf>=5.4.0",
    "python-igraph>=0.11.8",
    "rich>=14.0.0",
    "ruff>=0.11.6",
    "seaborn>=0.13.2",
    "shutup>=0.2.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wandb>=0.19.9",
]
